[package]
name = "wide-str-impl"
description = "Proc macro implementation for compile-time UTF-16 string literals, see the wide-str crate"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarane/wide-str"
authors = ["solarane <junmo.moon8@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"